[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcbio"
version = "2026.3.26"
description = "初中生的生物工具箱"
authors = [
    {name = "tc0512", email = "tancheng_0812@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich>1.0.0",
    "pillow>1.0"
]

[project.urls]
Homepage = "https://github.com/tc0512/tcbio"
